// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Highlighter > highlightFile method > should highlight a file 1`] = `
"[36m<test-dir>/test-highlighter-file.html.erb[0m

    [90m  1[0m [90m│[0m [38;2;224;108;117m<[0m[38;2;224;108;117mdiv[0m [38;2;209;154;102mclass[0m[38;2;86;182;194m=[0m[38;2;152;195;121m"[0m[38;2;152;195;121mcontainer[0m[38;2;152;195;121m"[0m[38;2;224;108;117m>[0m
    [90m  2[0m [90m│[0m   [38;2;190;80;70m<%[0m [38;2;198;120;221mif[0m user [38;2;190;80;70m%>[0m
    [90m  3[0m [90m│[0m     [38;2;224;108;117m<[0m[38;2;224;108;117mspan[0m[38;2;224;108;117m>[0m[38;2;171;178;191mHello[0m [38;2;190;80;70m<%=[0m user.name [38;2;190;80;70m%>[0m[38;2;198;120;221m![0m[38;2;224;108;117m</[0m[38;2;224;108;117mspan[0m[38;2;224;108;117m>[0m
    [90m  4[0m [90m│[0m   [38;2;190;80;70m<%[0m [38;2;198;120;221mend[0m [38;2;190;80;70m%>[0m
    [90m  5[0m [90m│[0m [38;2;224;108;117m</[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m"
`;

exports[`Highlighter > should handle ERB output tags 1`] = `"[38;2;190;80;70m<%=[0m user.name [38;2;190;80;70m%>[0m"`;

exports[`Highlighter > should handle all Ruby keywords correctly 1`] = `
[
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mif[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221munless[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221melse[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221melsif[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mend[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mdef[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mclass[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mmodule[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mreturn[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221myield[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mbreak[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mnext[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mcase[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mwhen[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mthen[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mwhile[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221muntil[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mfor[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221min[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mdo[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mbegin[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mrescue[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mensure[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mretry[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mraise[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221msuper[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mself[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mnil[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mtrue[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mfalse[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mand[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mor[0m [38;2;190;80;70m%>[0m",
  "[38;2;190;80;70m<%[0m [38;2;198;120;221mnot[0m [38;2;190;80;70m%>[0m",
]
`;

exports[`Highlighter > should handle mixed HTML and ERB content 1`] = `"[38;2;224;108;117m<[0m[38;2;224;108;117mh1[0m [38;2;209;154;102mid[0m[38;2;86;182;194m=[0m[38;2;152;195;121m"[0m[38;2;190;80;70m<%=[0m dom_id(article) [38;2;190;80;70m%>[0m[38;2;152;195;121m"[0m[38;2;224;108;117m>[0m[38;2;171;178;191mTitle[0m[38;2;224;108;117m</[0m[38;2;224;108;117mh1[0m[38;2;224;108;117m>[0m"`;

exports[`Highlighter > should highlight ERB blocks with Ruby syntax 1`] = `"[38;2;190;80;70m<%[0m [38;2;198;120;221mif[0m [38;2;198;120;221mtrue[0m [38;2;190;80;70m%>[0m"`;

exports[`Highlighter > should highlight HTML attributes 1`] = `"[38;2;224;108;117m<[0m[38;2;224;108;117mdiv[0m [38;2;209;154;102mclass[0m[38;2;86;182;194m=[0m[38;2;152;195;121m"[0m[38;2;152;195;121mexample[0m[38;2;152;195;121m"[0m [38;2;209;154;102mid[0m[38;2;86;182;194m=[0m[38;2;152;195;121m"[0m[38;2;152;195;121mtest[0m[38;2;152;195;121m"[0m[38;2;224;108;117m>[0m"`;

exports[`Highlighter > should highlight basic HTML tags 1`] = `"[38;2;224;108;117m<[0m[38;2;224;108;117mh1[0m[38;2;224;108;117m>[0m[38;2;171;178;191mHello[0m[38;2;224;108;117m</[0m[38;2;224;108;117mh1[0m[38;2;224;108;117m>[0m"`;

exports[`Highlighter > should highlight complex ERB with if/elsif/else/end 1`] = `
"[38;2;190;80;70m<%[0m [38;2;198;120;221mif[0m condition [38;2;190;80;70m%>[0m
    [38;2;224;108;117m<[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m[38;2;171;178;191mOne[0m[38;2;224;108;117m</[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221melsif[0m other [38;2;190;80;70m%>[0m
    [38;2;224;108;117m<[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m[38;2;171;178;191mTwo[0m[38;2;224;108;117m</[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221melse[0m [38;2;190;80;70m%>[0m
    [38;2;224;108;117m<[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m[38;2;171;178;191mThree[0m[38;2;224;108;117m</[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mend[0m [38;2;190;80;70m%>[0m"
`;

exports[`Highlighter > should not add colors when NO_COLOR is set 1`] = `"<% if true %>"`;

exports[`Standalone utility functions > highlightContent should work with default theme 1`] = `
"[36m[0m

    [90m  1[0m [90m│[0m [38;2;190;80;70m<%[0m [38;2;198;120;221mdef[0m hello [38;2;190;80;70m%>[0m[38;2;224;108;117m<[0m[38;2;224;108;117mspan[0m[38;2;224;108;117m>[0m[38;2;171;178;191mHi[0m[38;2;224;108;117m</[0m[38;2;224;108;117mspan[0m[38;2;224;108;117m>[0m[38;2;190;80;70m<%[0m [38;2;198;120;221mend[0m [38;2;190;80;70m%>[0m"
`;

exports[`Standalone utility functions > highlightContent should work with github-light theme 1`] = `
"[36m[0m

    [90m  1[0m [90m│[0m [38;2;227;98;9m<%[0m [38;2;215;58;73mtrue[0m [38;2;227;98;9m%>[0m"
`;

exports[`Standalone utility functions > highlightFile should work with default theme 1`] = `
"[36m<test-file>[0m

    [90m  1[0m [90m│[0m [38;2;224;108;117m<[0m[38;2;224;108;117mh1[0m[38;2;224;108;117m>[0m
    [90m  2[0m [90m│[0m   [38;2;190;80;70m<%[0m [38;2;198;120;221munless[0m condition [38;2;190;80;70m%>[0m
    [90m  3[0m [90m│[0m     [38;2;224;108;117m<[0m[38;2;224;108;117mp[0m[38;2;224;108;117m>[0m[38;2;171;178;191mDefault[0m [38;2;171;178;191mcontent[0m[38;2;224;108;117m</[0m[38;2;224;108;117mp[0m[38;2;224;108;117m>[0m
    [90m  4[0m [90m│[0m   [38;2;190;80;70m<%[0m [38;2;198;120;221mend[0m [38;2;190;80;70m%>[0m
    [90m  5[0m [90m│[0m [38;2;224;108;117m</[0m[38;2;224;108;117mh1[0m[38;2;224;108;117m>[0m"
`;

exports[`Standalone utility functions > highlightFile should work with simple theme 1`] = `
"[36m<test-file>[0m

    [90m  1[0m [90m│[0m [31m<[0m[31mh1[0m[31m>[0m
    [90m  2[0m [90m│[0m   [33m<%[0m [35munless[0m condition [33m%>[0m
    [90m  3[0m [90m│[0m     [31m<[0m[31mp[0m[31m>[0m[37mDefault[0m [37mcontent[0m[31m</[0m[31mp[0m[31m>[0m
    [90m  4[0m [90m│[0m   [33m<%[0m [35mend[0m [33m%>[0m
    [90m  5[0m [90m│[0m [31m</[0m[31mh1[0m[31m>[0m"
`;

exports[`Standalone utility functions > should support focusLine with contextLines 1`] = `
"[36mtest.erb[0m

    [90m  2[0m [90m│[0m [2;38;2;224;108;117m[2m<[22m[0m[2;38;2;224;108;117m[2mdiv[22m[0m[2m [22m[2;38;2;209;154;102m[2mclass[22m[0m[2;38;2;86;182;194m[2m=[22m[0m[2;38;2;152;195;121m[2m"[22m[0m[2;38;2;152;195;121m[2mcontainer[22m[0m[2;38;2;152;195;121m[2m"[22m[0m[2;38;2;224;108;117m[2m>[22m[0m
[36m  → [0m[1m  3[0m [90m│[0m   [38;2;190;80;70m<%[0m [38;2;198;120;221mif[0m user [38;2;190;80;70m%>[0m
    [90m  4[0m [90m│[0m [2m    [22m[2;38;2;224;108;117m[2m<[22m[0m[2;38;2;224;108;117m[2mspan[22m[0m[2;38;2;224;108;117m[2m>[22m[0m[2;38;2;171;178;191m[2mWelcome[22m[0m[2;38;2;224;108;117m[2m</[22m[0m[2;38;2;224;108;117m[2mspan[22m[0m[2;38;2;224;108;117m[2m>[22m[0m"
`;

exports[`Standalone utility functions > should support truncateLines option 1`] = `
"test.erb

      1 │ <div class="this-is-a-very-long-class-name-that…
      2 │ <span>Short line</span>"
`;
